[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/FoodTrack.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MovingFood.tscn" type="PackedScene" id=2]
[ext_resource path="res://all_foods.tres" type="Resource" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 29 )

[node name="FoodTrack" type="Node2D"]
script = ExtResource( 1 )
moving_food = ExtResource( 2 )
finishing_point_path = NodePath("FinishingPoint")
food_res = ExtResource( 3 )

[node name="FinishingPoint" type="Position2D" parent="."]
position = Vector2( 666, 0 )

[node name="DestinationArea" type="Area2D" parent="FinishingPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishingPoint/DestinationArea"]
shape = SubResource( 1 )

[node name="FoodIcon" type="Sprite" parent="FinishingPoint"]

[node name="FoodBackground" type="Sprite" parent="FinishingPoint"]
scale = Vector2( 1.1, 1.1 )

[node name="ArrivedFoodSprite" type="Sprite" parent="FinishingPoint"]

[node name="ClearButton" type="Button" parent="FinishingPoint"]
margin_left = -52.0
margin_top = -61.0
margin_right = 52.0
margin_bottom = 61.0
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ClearButtonTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="FinishingPoint/DestinationArea" to="." method="_on_destination_area_entered"]
[connection signal="pressed" from="FinishingPoint/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="spawn_food"]
[connection signal="timeout" from="ClearButtonTimer" to="." method="reset_clicks"]
